--- a/QALegend/test-output/index.html
+++ b/QALegend/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">7 methods,   7 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -108,7 +108,32 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="TestScript.QALegendEstimatesTest" class="method navigator-link" hash-for-method="createEstimate">createEstimate</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="TestScript.QALegendHomePageTest" class="method navigator-link" hash-for-method="createnewDashboard">createnewDashboard</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="TestScript.QALegendHomePageTest" class="method navigator-link" hash-for-method="editDashboard">editDashboard</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="TestScript.QALegendLoginTest" class="method navigator-link" hash-for-method="loginuserlogin">loginuserlogin</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="TestScript.QALegendSignupTest" class="method navigator-link" hash-for-method="signup">signup</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="TestScript.QALegendLoginTest" class="method navigator-link" hash-for-method="urlValidation">urlValidation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -123,6 +148,28 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">TestScript.QALegendLoginTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginuserlogin">
+                  </a> <!-- loginuserlogin -->
+                  <span class="method-name">loginuserlogin</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="urlValidation">
+                  </a> <!-- urlValidation -->
+                  <span class="method-name">urlValidation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -153,6 +200,43 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">TestScript.QALegendEstimatesTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="createEstimate">
+                  </a> <!-- createEstimate -->
+                  <span class="method-name">createEstimate</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">TestScript.QALegendHomePageTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="createnewDashboard">
+                  </a> <!-- createnewDashboard -->
+                  <span class="method-name">createnewDashboard</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="editDashboard">
+                  </a> <!-- editDashboard -->
+                  <span class="method-name">editDashboard</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -168,6 +252,9 @@
     &lt;classes&gt;
       &lt;class name=&quot;TestScript.QALegendEventTest&quot;/&gt;
       &lt;class name=&quot;TestScript.QALegendSignupTest&quot;/&gt;
+      &lt;class name=&quot;TestScript.QALegendLoginTest&quot;/&gt;
+      &lt;class name=&quot;TestScript.QALegendHomePageTest&quot;/&gt;
+      &lt;class name=&quot;TestScript.QALegendEstimatesTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -181,7 +268,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (2 classes)</span>
+                <span class="test-name">Test (5 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -207,20 +294,40 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(7);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addanEvent')
-data.setCell(0, 2, 'TestScript.QALegendEventTest')
-data.setCell(0, 3, 9972);
+data.setCell(0, 1, 'editDashboard')
+data.setCell(0, 2, 'TestScript.QALegendHomePageTest')
+data.setCell(0, 3, 19103);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'signup')
-data.setCell(1, 2, 'TestScript.QALegendSignupTest')
-data.setCell(1, 3, 7166);
+data.setCell(1, 1, 'createEstimate')
+data.setCell(1, 2, 'TestScript.QALegendEstimatesTest')
+data.setCell(1, 3, 10421);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'createnewDashboard')
+data.setCell(2, 2, 'TestScript.QALegendHomePageTest')
+data.setCell(2, 3, 9844);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'addanEvent')
+data.setCell(3, 2, 'TestScript.QALegendEventTest')
+data.setCell(3, 3, 9752);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'signup')
+data.setCell(4, 2, 'TestScript.QALegendSignupTest')
+data.setCell(4, 3, 8036);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'loginuserlogin')
+data.setCell(5, 2, 'TestScript.QALegendLoginTest')
+data.setCell(5, 3, 2775);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'urlValidation')
+data.setCell(6, 2, 'TestScript.QALegendLoginTest')
+data.setCell(6, 3, 113);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -253,18 +360,67 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">addanEvent</span>
-                <span class="method-start">26392 ms</span>
+                <span class="method-start">26455 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendSignupTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">36393 ms</span>
+                <span class="method-start">36229 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">signup</span>
-                <span class="method-start">52680 ms</span>
+                <span class="method-start">60864 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">TestScript.QALegendLoginTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">browserinitialization</span>
+                <span class="method-start">68915 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">loginuserlogin</span>
+                <span class="method-start">94315 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">browserinitialization</span>
+                <span class="method-start">97095 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">urlValidation</span>
+                <span class="method-start">122219 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">TestScript.QALegendHomePageTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">browserinitialization</span>
+                <span class="method-start">122347 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">createnewDashboard</span>
+                <span class="method-start">146177 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">browserinitialization</span>
+                <span class="method-start">156024 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">editDashboard</span>
+                <span class="method-start">175086 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">TestScript.QALegendEstimatesTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">browserinitialization</span>
+                <span class="method-start">194199 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">createEstimate</span>
+                <span class="method-start">218717 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
