--- a/QALegend/test-output/index.html
+++ b/QALegend/test-output/index.html
@@ -298,36 +298,36 @@ data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'editDashboard')
 data.setCell(0, 2, 'TestScript.QALegendHomePageTest')
-data.setCell(0, 3, 19103);
+data.setCell(0, 3, 18745);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'createEstimate')
 data.setCell(1, 2, 'TestScript.QALegendEstimatesTest')
-data.setCell(1, 3, 10421);
+data.setCell(1, 3, 10174);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'createnewDashboard')
 data.setCell(2, 2, 'TestScript.QALegendHomePageTest')
-data.setCell(2, 3, 9844);
+data.setCell(2, 3, 9148);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'addanEvent')
 data.setCell(3, 2, 'TestScript.QALegendEventTest')
-data.setCell(3, 3, 9752);
+data.setCell(3, 3, 8512);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'signup')
 data.setCell(4, 2, 'TestScript.QALegendSignupTest')
-data.setCell(4, 3, 8036);
+data.setCell(4, 3, 5445);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'loginuserlogin')
 data.setCell(5, 2, 'TestScript.QALegendLoginTest')
-data.setCell(5, 3, 2775);
+data.setCell(5, 3, 2417);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'urlValidation')
 data.setCell(6, 2, 'TestScript.QALegendLoginTest')
-data.setCell(6, 3, 113);
+data.setCell(6, 3, 24);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 54 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -360,67 +360,67 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">addanEvent</span>
-                <span class="method-start">26455 ms</span>
+                <span class="method-start">25851 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendSignupTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">36229 ms</span>
+                <span class="method-start">34387 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">signup</span>
-                <span class="method-start">60864 ms</span>
+                <span class="method-start">58877 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">68915 ms</span>
+                <span class="method-start">64322 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">loginuserlogin</span>
-                <span class="method-start">94315 ms</span>
+                <span class="method-start">89067 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">97095 ms</span>
+                <span class="method-start">91489 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">urlValidation</span>
-                <span class="method-start">122219 ms</span>
+                <span class="method-start">108107 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendHomePageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">122347 ms</span>
+                <span class="method-start">108136 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">createnewDashboard</span>
-                <span class="method-start">146177 ms</span>
+                <span class="method-start">122075 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">156024 ms</span>
+                <span class="method-start">131230 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">editDashboard</span>
-                <span class="method-start">175086 ms</span>
+                <span class="method-start">156835 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendEstimatesTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">194199 ms</span>
+                <span class="method-start">175590 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">createEstimate</span>
-                <span class="method-start">218717 ms</span>
+                <span class="method-start">190262 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
