--- a/QALegend/test-output/index.html
+++ b/QALegend/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods,   7 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -109,6 +109,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="TestScript.QALegendEstimatesTest" class="method navigator-link" hash-for-method="createEstimate">createEstimate</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="TestScript.QALegendTicketsTest" class="method navigator-link" hash-for-method="createTicket">createTicket</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -188,6 +193,21 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
+              <span class="class-name">TestScript.QALegendTicketsTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="createTicket">
+                  </a> <!-- createTicket -->
+                  <span class="method-name">createTicket</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
               <span class="class-name">TestScript.QALegendEventTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -255,6 +275,7 @@
       &lt;class name=&quot;TestScript.QALegendLoginTest&quot;/&gt;
       &lt;class name=&quot;TestScript.QALegendHomePageTest&quot;/&gt;
       &lt;class name=&quot;TestScript.QALegendEstimatesTest&quot;/&gt;
+      &lt;class name=&quot;TestScript.QALegendTicketsTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -268,7 +289,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (5 classes)</span>
+                <span class="test-name">Test (6 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -294,40 +315,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(7);
+data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'editDashboard')
 data.setCell(0, 2, 'TestScript.QALegendHomePageTest')
-data.setCell(0, 3, 18745);
+data.setCell(0, 3, 18900);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'createEstimate')
-data.setCell(1, 2, 'TestScript.QALegendEstimatesTest')
-data.setCell(1, 3, 10174);
+data.setCell(1, 1, 'createTicket')
+data.setCell(1, 2, 'TestScript.QALegendTicketsTest')
+data.setCell(1, 3, 11058);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'createnewDashboard')
 data.setCell(2, 2, 'TestScript.QALegendHomePageTest')
-data.setCell(2, 3, 9148);
+data.setCell(2, 3, 10273);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'addanEvent')
-data.setCell(3, 2, 'TestScript.QALegendEventTest')
-data.setCell(3, 3, 8512);
+data.setCell(3, 1, 'createEstimate')
+data.setCell(3, 2, 'TestScript.QALegendEstimatesTest')
+data.setCell(3, 3, 9995);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'signup')
-data.setCell(4, 2, 'TestScript.QALegendSignupTest')
-data.setCell(4, 3, 5445);
+data.setCell(4, 1, 'addanEvent')
+data.setCell(4, 2, 'TestScript.QALegendEventTest')
+data.setCell(4, 3, 9242);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'loginuserlogin')
-data.setCell(5, 2, 'TestScript.QALegendLoginTest')
-data.setCell(5, 3, 2417);
+data.setCell(5, 1, 'signup')
+data.setCell(5, 2, 'TestScript.QALegendSignupTest')
+data.setCell(5, 3, 5514);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'urlValidation')
+data.setCell(6, 1, 'loginuserlogin')
 data.setCell(6, 2, 'TestScript.QALegendLoginTest')
-data.setCell(6, 3, 24);
+data.setCell(6, 3, 2341);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'urlValidation')
+data.setCell(7, 2, 'TestScript.QALegendLoginTest')
+data.setCell(7, 3, 103);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 54 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -360,67 +385,78 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">addanEvent</span>
-                <span class="method-start">25851 ms</span>
+                <span class="method-start">15569 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendSignupTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">34387 ms</span>
+                <span class="method-start">24843 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">signup</span>
-                <span class="method-start">58877 ms</span>
+                <span class="method-start">42129 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">64322 ms</span>
+                <span class="method-start">47658 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">loginuserlogin</span>
-                <span class="method-start">89067 ms</span>
+                <span class="method-start">65963 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">91489 ms</span>
+                <span class="method-start">68310 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">urlValidation</span>
-                <span class="method-start">108107 ms</span>
+                <span class="method-start">93065 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendHomePageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">108136 ms</span>
+                <span class="method-start">93173 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">createnewDashboard</span>
-                <span class="method-start">122075 ms</span>
+                <span class="method-start">113995 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">131230 ms</span>
+                <span class="method-start">124268 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">editDashboard</span>
-                <span class="method-start">156835 ms</span>
+                <span class="method-start">148652 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestScript.QALegendEstimatesTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">browserinitialization</span>
-                <span class="method-start">175590 ms</span>
+                <span class="method-start">167552 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">createEstimate</span>
-                <span class="method-start">190262 ms</span>
+                <span class="method-start">185817 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">TestScript.QALegendTicketsTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">browserinitialization</span>
+                <span class="method-start">195814 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">createTicket</span>
+                <span class="method-start">221261 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
