--- a/QALegend/test-output/emailable-report.html
+++ b/QALegend/test-output/emailable-report.html
@@ -8,12 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Failed suite [Suite]</th></tr>
-<tr><td><a href="#t0">Test(failed)</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">76,485</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">27,646</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Failed suite [Suite]</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test(failed) &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">TestScript.QALegendHomePageTest</td><td><a href="#m0">createnewDashboard</a></td><td rowspan="1">1734698106905</td><td rowspan="1">8787</td></tr><tr class="passedeven"><td><a href="#m1">editDashboard</a></td><td rowspan="1">1734698140175</td><td rowspan="1">17868</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestScript.QALegendEventTest</td><td><a href="#m0">addanEvent</a></td><td rowspan="1">1734708025913</td><td rowspan="1">1891</td></tr></tbody>
 </table>
-<h2>Test(failed)</h2><h3 id="m0">TestScript.QALegendHomePageTest#createnewDashboard</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestScript.QALegendHomePageTest#editDashboard</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">TestScript.QALegendEventTest#addanEvent</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Error: Unresolved compilation problem: 
+	addEventButton cannot be resolved to a variable
+
+	at PageClasses.QALegendEventPage.clickOnAddEventButton(QALegendEventPage.java:65)
+	at TestScript.QALegendEventTest.addanEvent(QALegendEventTest.java:19)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
