--- a/QALegend/test-output/emailable-report.html
+++ b/QALegend/test-output/emailable-report.html
@@ -9,16 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">27,646</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">140,505</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestScript.QALegendEventTest</td><td><a href="#m0">addanEvent</a></td><td rowspan="1">1734708025913</td><td rowspan="1">1891</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestScript.QALegendEventTest</td><td><a href="#m0">addanEvent</a></td><td rowspan="1">1735314093290</td><td rowspan="1">10593</td></tr><tr class="passedodd"><td rowspan="1">TestScript.QALegendMessagesTest</td><td><a href="#m1">composingAMessage</a></td><td rowspan="1">1735314130130</td><td rowspan="1">10855</td></tr><tr class="passedeven"><td rowspan="2">TestScript.QALegendSignupTest</td><td><a href="#m2">registeringUser</a></td><td rowspan="1">1735314168027</td><td rowspan="1">6219</td></tr><tr class="passedeven"><td><a href="#m3">signedupUserSignin</a></td><td rowspan="1">1735314201098</td><td rowspan="1">2268</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">TestScript.QALegendEventTest#addanEvent</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Error: Unresolved compilation problem: 
-	addEventButton cannot be resolved to a variable
-
-	at PageClasses.QALegendEventPage.clickOnAddEventButton(QALegendEventPage.java:65)
-	at TestScript.QALegendEventTest.addanEvent(QALegendEventTest.java:19)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">TestScript.QALegendEventTest#addanEvent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestScript.QALegendMessagesTest#composingAMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">TestScript.QALegendSignupTest#registeringUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">TestScript.QALegendSignupTest#signedupUserSignin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
