--- a/QALegend/test-output/emailable-report.html
+++ b/QALegend/test-output/emailable-report.html
@@ -9,56 +9,20 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">11</td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num">423,067</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">11</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">377,466</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; retried</th></tr><tr class="retriedeven"><td rowspan="1">TestScript.QALegendHomePageTest</td><td><a href="#m0">createnewDashboard</a></td><td rowspan="1">1735563317194</td><td rowspan="1">47617</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestScript.QALegendEstimatesTest</td><td><a href="#m1">createEstimate</a></td><td rowspan="1">1735563447773</td><td rowspan="1">10685</td></tr><tr class="passedodd"><td rowspan="1">TestScript.QALegendEventTest</td><td><a href="#m2">addanEvent</a></td><td rowspan="1">1735563170546</td><td rowspan="1">9054</td></tr><tr class="passedeven"><td rowspan="2">TestScript.QALegendHomePageTest</td><td><a href="#m3">createnewDashboard</a></td><td rowspan="1">1735563389671</td><td rowspan="1">8204</td></tr><tr class="passedeven"><td><a href="#m4">editDashboard</a></td><td rowspan="1">1735563415466</td><td rowspan="1">17216</td></tr><tr class="passedodd"><td rowspan="2">TestScript.QALegendInvoicesTest</td><td><a href="#m5">eyeButtonFunctionality</a></td><td rowspan="1">1735563519839</td><td rowspan="1">15913</td></tr><tr class="passedodd"><td><a href="#m6">validatingInvoiceAmount</a></td><td rowspan="1">1735563560462</td><td rowspan="1">4149</td></tr><tr class="passedeven"><td rowspan="1">TestScript.QALegendLoginTest</td><td><a href="#m7">loginuserlogin</a></td><td rowspan="1">1735563290016</td><td rowspan="1">2409</td></tr><tr class="passedodd"><td rowspan="1">TestScript.QALegendMessagesTest</td><td><a href="#m8">composingAMessage</a></td><td rowspan="1">1735563201172</td><td rowspan="1">10801</td></tr><tr class="passedeven"><td rowspan="2">TestScript.QALegendSignupTest</td><td><a href="#m9">registeringUser</a></td><td rowspan="1">1735563234516</td><td rowspan="1">3914</td></tr><tr class="passedeven"><td><a href="#m10">signedupUserSignin</a></td><td rowspan="1">1735563262930</td><td rowspan="1">2062</td></tr><tr class="passedodd"><td rowspan="1">TestScript.QALegendTicketsTest</td><td><a href="#m11">createTicket</a></td><td rowspan="1">1735563483475</td><td rowspan="1">11633</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestScript.QALegendEstimatesTest</td><td><a href="#m0">createEstimate</a></td><td rowspan="1">1735666305021</td><td rowspan="1">11818</td></tr><tr class="passedodd"><td rowspan="1">TestScript.QALegendEventTest</td><td><a href="#m1">addanEvent</a></td><td rowspan="1">1735666074481</td><td rowspan="1">8314</td></tr><tr class="passedeven"><td rowspan="2">TestScript.QALegendHomePageTest</td><td><a href="#m2">createnewDashboard</a></td><td rowspan="1">1735666228795</td><td rowspan="1">9190</td></tr><tr class="passedeven"><td><a href="#m3">editDashboard</a></td><td rowspan="1">1735666262757</td><td rowspan="1">17740</td></tr><tr class="passedodd"><td rowspan="2">TestScript.QALegendInvoicesTest</td><td><a href="#m4">eyeButtonFunctionality</a></td><td rowspan="1">1735666381794</td><td rowspan="1">15495</td></tr><tr class="passedodd"><td><a href="#m5">validatingInvoiceAmount</a></td><td rowspan="1">1735666421720</td><td rowspan="1">4445</td></tr><tr class="passedeven"><td rowspan="1">TestScript.QALegendLoginTest</td><td><a href="#m6">loginuserlogin</a></td><td rowspan="1">1735666201798</td><td rowspan="1">2638</td></tr><tr class="passedodd"><td rowspan="1">TestScript.QALegendMessagesTest</td><td><a href="#m7">composingAMessage</a></td><td rowspan="1">1735666107546</td><td rowspan="1">11353</td></tr><tr class="passedeven"><td rowspan="2">TestScript.QALegendSignupTest</td><td><a href="#m8">registeringUser</a></td><td rowspan="1">1735666143362</td><td rowspan="1">6776</td></tr><tr class="passedeven"><td><a href="#m9">signedupUserSignin</a></td><td rowspan="1">1735666174620</td><td rowspan="1">2527</td></tr><tr class="passedodd"><td rowspan="1">TestScript.QALegendTicketsTest</td><td><a href="#m10">createTicket</a></td><td rowspan="1">1735666341782</td><td rowspan="1">15106</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">TestScript.QALegendHomePageTest#createnewDashboard</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for visibility of Proxy element for: DefaultElementLocator &apos;By.xpath: //div[@class=&apos;widget-details&apos;]//h1&apos; (tried for 30 second(s) with 500 milliseconds interval)
-	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:228)
-	at Utilities.WaitUtility.waitForVisibilityofElement(WaitUtility.java:25)
-	at PageClasses.QALegendHomePage.totalProjectsCountfromwidgets(QALegendHomePage.java:148)
-	at TestScript.QALegendHomePageTest.createnewDashboard(QALegendHomePageTest.java:15)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-Caused by: org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//div[@class=&apos;widget-details&apos;]//h1&quot;}
-  (Session info: chrome=131.0.6778.205)
-For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
-Build info: version: &apos;4.25.0&apos;, revision: &apos;8a8aea2337&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;22.0.2&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [1fe9df5b0bebc103c0212c12bb79ed1e, findElement {using=xpath, value=//div[@class=&apos;widget-details&apos;]//h1}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 131.0.6778.205, chrome: {chromedriverVersion: 131.0.6778.204 (52183f9e99a..., userDataDir: C:\Users\hp\AppData\Local\T...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:63863}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:63863/devtoo..., se:cdpVersion: 131.0.6778.205, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 1fe9df5b0bebc103c0212c12bb79ed1e
-	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:190)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:545)
-	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
-	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:368)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:362)
-	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:68)
-	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:38)
-	at jdk.proxy2/jdk.proxy2.$Proxy13.isDisplayed(Unknown Source)
-	at org.openqa.selenium.support.ui.ExpectedConditions.elementIfVisible(ExpectedConditions.java:304)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:290)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:287)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:203)
-	... 29 more
-... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestScript.QALegendEstimatesTest#createEstimate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">TestScript.QALegendEventTest#addanEvent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">TestScript.QALegendHomePageTest#createnewDashboard</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">TestScript.QALegendHomePageTest#editDashboard</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">TestScript.QALegendInvoicesTest#eyeButtonFunctionality</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">TestScript.QALegendInvoicesTest#validatingInvoiceAmount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">TestScript.QALegendLoginTest#loginuserlogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">TestScript.QALegendMessagesTest#composingAMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">TestScript.QALegendSignupTest#registeringUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">TestScript.QALegendSignupTest#signedupUserSignin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m11">TestScript.QALegendTicketsTest#createTicket</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">TestScript.QALegendEstimatesTest#createEstimate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestScript.QALegendEventTest#addanEvent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">TestScript.QALegendHomePageTest#createnewDashboard</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">TestScript.QALegendHomePageTest#editDashboard</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">TestScript.QALegendInvoicesTest#eyeButtonFunctionality</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">TestScript.QALegendInvoicesTest#validatingInvoiceAmount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">TestScript.QALegendLoginTest#loginuserlogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">TestScript.QALegendMessagesTest#composingAMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">TestScript.QALegendSignupTest#registeringUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">TestScript.QALegendSignupTest#signedupUserSignin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">TestScript.QALegendTicketsTest#createTicket</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
